--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.20"
+    ext {
+        kotlin_version = '1.5.20'
+        media_version = '1.1.3'
+        navigation_version = '2.3.5'
+        retrofit_version = '2.9.0'
+        moshi_version = '1.12.0'
+    }
     repositories {
         google()
         mavenCentral()
@@ -18,7 +24,6 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 
